--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ schedule = "^1.1.0"
 bs4 = "^0.0.1"
 sphobjinv = "^2.1"
 disnake = "^2.3.0"
+colorama = "^0.4.4"
 
 [tool.poetry.dev-dependencies]
 
