--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.0.2
-schedule==1.1.0
-bs4==0.0.1
-sphobjinv==2.1
+Flask
+schedule
+bs4
+sphobjinv
 disnake
-colorama==0.4.4
-furl==2.1.2
-aiohttp==3.8.1
-nest-asyncio==1.5.4
+colorama
+furl
+aiohttp
+nest-asyncio
+python-dotenv
