--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ aiohttp = "^3.8.1"
 nest-asyncio = "^1.5.4"
 websockets = "^10.0"
 python-dotenv = "^0.19.2"
+replit = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
